<resources>
    <string name="app_name">FlagsInCity</string>
    <string name="rules_text">After reading this text the user will know how to play this game!</string>
    <string name="about_text">After reading this text the user will know what is this all about!</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonHome">set Home</string>
    <string name="buttonFortress">set Fortress</string>
    <string name="buttonClearRecords">Clear records</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="fortress_picture">Fortress Picture</string>
    <string name="user_s_progress_and_his_fortress">User\'s progress and his fortress</string>
    <string name="userNameLogin"> </string>
    <string name="Sign_in_problem">Problem with Google Sign in</string>
    <string name="continue_to_game">Continue to game</string>
    <string name="fortress">Fortress</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="userNickname">Nickname</string>
    <string name="userLives">Lives:</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="yourHomeLocation">Your Home location</string>
    <string name="buttonChangeHome">Change location of your Home</string>
    <string name="buttonChangeFortress">Change location of your Fortress</string>
    <string name="get_supply">Get supply</string>
    <string name="give_supply">Give supply</string>


    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>
    <string name="you_are_caring_supplies">YOU ARE CARRYING SUPPLIES!</string>
</resources>