<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="mapsViewModel"
            type="com.example.flagsincity.mapsViewModel.MapsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".map.MapsFragment">


        </androidx.fragment.app.FragmentContainerView>

        <Button
            android:id="@+id/buttonGetSupply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{mapsViewModel.getButtonVisible}"
            android:onClick="@{() -> mapsViewModel.onGetSupply()}"
            android:text="@string/get_supply"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toStartOf="@+id/buttonGiveSupply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonClearRecords" />

        <Button
            android:id="@+id/buttonGiveSupply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{mapsViewModel.giveButtonVisible}"
            android:onClick="@{() -> mapsViewModel.onGiveSupply()}"
            android:text="@string/give_supply"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonGetSupply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonGetSupply"
            app:layout_constraintTop_toTopOf="@+id/buttonGetSupply" />


        <Button
            android:id="@+id/buttonRecordHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonHome"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="10dp"
            android:visibility="@{mapsViewModel.setHomeVisibility}"
            app:layout_constraintBottom_toTopOf="@+id/buttonRecordFortress"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonRecordFortress"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:text="@string/buttonFortress"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="10dp"
            android:visibility="@{mapsViewModel.setFortressVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/buttonRecordHome" />

        <Button
            android:id="@+id/buttonClearRecords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> mapsViewModel.onClearAll()}"
            android:text="@string/buttonClearRecords"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="10dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>