<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="fortressViewModel"
            type="com.example.flagsincity.fortress.FortressViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"

            android:text="@{fortressViewModel.userNickName}"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/fortressView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fortressView"
            android:layout_width="167dp"
            android:layout_height="174dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/user_s_progress_and_his_fortress"
            app:layout_constraintBottom_toTopOf="@+id/yourHomeLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_nickname" />



        <TextView
            android:id="@+id/yourHomeLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourHomeLocation"
            app:layout_constraintBottom_toTopOf="@+id/button_change_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fortressView" />


        <Button
            android:id="@+id/button_change_nickname"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/edit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/user_lives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yourHomeLocation"/>



        <TextView
            android:id="@+id/user_lives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/userLives"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_change_nickname"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="222dp"
            android:layout_height="32dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:max="100"
            android:padding="10dp"
            android:progressTint="#800D0D"
            android:scrollbarSize="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_lives"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>